fix: add z-index for HP

--- a/src/App.css
+++ b/src/App.css
@@ -331,6 +331,7 @@ h4 {
   min-width: 300px;
   text-align: right;
   font-size: 20px;
+  z-index: 10;
 }
 
 .carousel-custom {
